// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router instance methods getTestFileCallback: insecure 1`] = `
"<!doctype html>
<html>

  <head>
    <script type=\\"text/javascript\\" src=\\"http://foo/bundle/bar\\"></script>
  </head>

  <body>
    <p>Please open developer console</p>
  </body>

</html>"
`;

exports[`Router instance methods getTestFileCallback: secure 1`] = `
"<!doctype html>
<html>

  <head>
    <script type=\\"text/javascript\\" src=\\"https://foo/bundle/bar\\"></script>
  </head>

  <body>
    <p>Please open developer console</p>
  </body>

</html>"
`;

exports[`Router instance methods onError 1`] = `[Error: bar]`;

exports[`Router instance methods onError with message 1`] = `[Error: foo: bar]`;

exports[`Router instance methods onPipelineEmpty 1`] = `[Error: Could not load 1 or more of the resources in the payload from storage]`;

exports[`bundling multiple css feeds /bundle/:file 1`] = `
Object {
  "file": "865dac877158c1539796859ea0717731af32e4d0d2012cba335aa628bad0454e.css",
  "uri": "/bundle/865dac877158c1539796859ea0717731af32e4d0d2012cba335aa628bad0454e.css",
}
`;

exports[`bundling multiple css feeds /bundle/:file 2`] = `
"/* my-module-1/main.css */
h2: { color: green; }

/* my-module-2/main.css */
h1 { color:blue; }"
`;

exports[`bundling multiple css feeds /bundle/css with multiple invalid bundle references 1`] = `
Object {
  "file": "865dac877158c1539796859ea0717731af32e4d0d2012cba335aa628bad0454e.css",
  "uri": "/bundle/865dac877158c1539796859ea0717731af32e4d0d2012cba335aa628bad0454e.css",
}
`;

exports[`bundling multiple js feeds /bundle/:file 1`] = `
"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
\\"use strict\\";module.exports.world=function(){return\\"world\\"};
},{}],2:[function(require,module,exports){
\\"use strict\\";module.exports.hello=function(){return\\"hello\\"};
},{}]},{},[2,1]);
"
`;

exports[`bundling multiple js feeds /bundle/:file 2`] = `
Object {
  "file": "68b9bf8f4fbbefea8cd76d4490a81b77cb14900141d673e8ec701254a608faea.js",
  "uri": "/bundle/68b9bf8f4fbbefea8cd76d4490a81b77cb14900141d673e8ec701254a608faea.js",
}
`;

exports[`bundling multiple js feeds /bundle/:file 3`] = `
"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
\\"use strict\\";module.exports.world=function(){return\\"world\\"};
},{}],2:[function(require,module,exports){
\\"use strict\\";module.exports.hello=function(){return\\"hello\\"};
},{}]},{},[2,1]);
"
`;

exports[`bundling multiple js feeds /bundle/js with multiple invalid bundle reference 1`] = `
"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
\\"use strict\\";module.exports.world=function(){return\\"world\\"};
},{}],2:[function(require,module,exports){
\\"use strict\\";module.exports.hello=function(){return\\"hello\\"};
},{}]},{},[2,1]);
"
`;

exports[`bundling multiple js feeds /bundle/js with multiple invalid bundle reference 2`] = `
Object {
  "file": "68b9bf8f4fbbefea8cd76d4490a81b77cb14900141d673e8ec701254a608faea.js",
  "uri": "/bundle/68b9bf8f4fbbefea8cd76d4490a81b77cb14900141d673e8ec701254a608faea.js",
}
`;

exports[`bundling single css feed /bundle/css 1`] = `
Object {
  "file": "28b015efa819a445a46282fff9125aac41deed83d81d5f19a994a322f30cbbfb.css",
  "uri": "/bundle/28b015efa819a445a46282fff9125aac41deed83d81d5f19a994a322f30cbbfb.css",
}
`;

exports[`bundling single css feed persist meta information 1`] = `
[MockFunction metaStorageSet] {
  "calls": Array [
    Array [
      "css/myId",
      Object {
        "id": "myId",
        "version": "28b015efa819a445a46282fff9125aac41deed83d81d5f19a994a322f30cbbfb.css",
      },
    ],
  ],
}
`;

exports[`bundling single js feed /bundle/js 1`] = `
Object {
  "file": "0b8699357bf3807af4ed0e91c1e8bbc5ae86c2fafa6a2b3c3444950457d034fd.js",
  "uri": "/bundle/0b8699357bf3807af4ed0e91c1e8bbc5ae86c2fafa6a2b3c3444950457d034fd.js",
}
`;

exports[`bundling single js feed persist meta information 1`] = `
[MockFunction metaStorageSet] {
  "calls": Array [
    Array [
      "js/myId",
      Object {
        "id": "myId",
        "version": "0b8699357bf3807af4ed0e91c1e8bbc5ae86c2fafa6a2b3c3444950457d034fd.js",
      },
    ],
  ],
}
`;

exports[`downloading feeds /feed/:file 1`] = `
Array [
  Object {
    "deps": Object {},
    "file": "./assets/js/bar.js",
    "id": "c645cf572a8f5acf8716e4846b408d3b1ca45c58",
    "source": "\\"use strict\\";module.exports.world=function(){return\\"world\\"};",
  },
]
`;

exports[`uploading css feeds /feed/css/myId 1`] = `
[MockFunction metaStorageSet] {
  "calls": Array [
    Array [
      "css/myId",
      Object {
        "id": "myId",
        "version": "3252bd07a7cbf1c6be20e197ef81070673d00ee887ebf1e3ca60582f44e37617.json",
      },
    ],
  ],
}
`;

exports[`uploading js feeds /feed/js/myId 1`] = `
[MockFunction metaStorageSet] {
  "calls": Array [
    Array [
      "js/myId",
      Object {
        "id": "myId",
        "version": "f652e904f72daa8bd884df867b69861bcb90be9508a1d558f05070d5d044d0d3.json",
      },
    ],
  ],
}
`;
